 * Default prompt displays git and svn status
 * Command history increased from 1000 to 2000
 * Lexical text selection (Shift-Up/Down)
 * Search text in the current input line (F3, Shift-F3)
 * Alt-Up to go to the parent directory
 * Overwrite mode (Ins)
 
What's new in PyCmd 0.9?

 * Configuration file (init.py) for customizing colors, prompt etc.
 * Fuzzy history search
 * Tab-completion now works with both '/' and '\' as separators
 * Switch build from py2exe (no longer maintained) to cx_freeze
 * Added 64-bit build
 * Bugfixes in completion, line rendering

What's new in PyCmd 0.8?

 * Treat .cmd files as executable (just like .bat)
 * Flash titlebar after long tasks if the window is inactive
 * Faster completions
 * Warn before displaying long completion list
 * The completion works correctly for (semicolon-separated) lists of paths
   (e.g. --classpath="C:\Program Files\classes;d:\users\horea\my_jars;...)
 * Avoid duplicate backslash when completing
 * Quiet option (/Q) to suppress welcome and bye messages
 * Numbered entries in the directory history (use Alt-1..9 to switch)
 * Improved README
 * Bugfixes in completion, copy & paste


What's new in PyCmd 0.7?

 * Tab-completion now works with wildcards (*, ?)
 * Detach GUI applications from the console (Frerich Raabe)
 * Dynamic, context-sensitive token expansion with Alt-/ (Emacs-style)
 * Ctrl-C "aborts" a line if no text is selected
 * new switch (-T) to set a prefix for the window title (Frerich Raabe)


What's new in PyCmd 0.6?

 * Basic command line arguments (/c and /k -- similar to cmd.exe)
 * Display completions on multiple columns
 * Highlight common prefix when displaying completions
 * Log crash reports under %APPDATA%\PyCmd
 * More accurate handling of syntactically incorrect commands
 * Improved word-by-word navigation and editing (more separators)
 * Bugfixes in history search, directory history


What's new in PyCmd 0.5?
